--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node ./scripts/create-env.js && webpack --mode production --config webpack.config.js",
-    "dev": "webpack serve --config webpack.config.dev.js"
+    "dev": "webpack --config webpack.config.dev.js",
+    "dev:watch": "webpack serve --config webpack.config.dev.js"
   },
   "keywords": [
     "Clock"
